fix: minor compatibility fix with recents jdks